# my-site

./: .gitignore  my-site.sln
services/account-authentication/: package.json
services/sf-core/: .env.debug  .env.template  .gitignore  Cargo.toml  build.rs  docker-compose.yml  dockerfile  generate_migration.sh  readme.md  sf-core.csproj  shortcut.sh
services/sf-core/data/: preset_items.csv
services/sf-core/migrations/: 000_character.down.sql  000_character.up.sql  000_init.down.sql  000_init.up.sql  001_item.down.sql  001_item.up.sql  002_container.down.sql  002_container.up.sql  20250404230357_init.down.sql  20250404230357_init.up.sql
services/sf-core/migrations/20250401152205_create_users/: up.sql
services/sf-core/migrations/20250401163108_init/: down.sql  up.sql
services/sf-core/proto/: game.proto  profile.proto  user.proto
services/sf-core/src/: main.rs
services/sf-core/src/db/: character_queries.rs  container_queries.rs  entity_queries.rs  item_queries.rs  look_up_table_queries.rs  maintain_presets.rs  mod.rs  user_queries.rs
services/sf-core/src/misc/: mod.rs
services/sf-core/src/models/: attribute.rs  character.rs  container.rs  entity.rs  inventory.rs  item.rs  mod.rs  user.rs
services/sf-core/src/proto/: mod.rs
services/sf-core/src/schema/: mod.rs
services/sf-core/src/server/: mod.rs
services/sf-core/src/services/: error.rs  mod.rs  profile_service.rs  transactional.rs  user_service.rs
services/sf-core/tests/database_tests/: docker-compose.yml  dockerfile
services/sf-core/tests/database_tests/test_scripts/: test_characters.sql
(+31 files in other folders)
