[package]
name = "sf-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
dotenvy = "0.15.7"
tonic = "0.13.0"
prost = { version = "0.13.5", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
csv = "1.3"

[build-dependencies]
tonic-build = "0.13.0"